# whale-tracker-agent

./: .env.example  .gitignore  README.md  config.yaml  index.html  pyproject.toml
examples/: multi_whale.py  watch_whale.py
src/whale_tracker/: __init__.py  agent.py  cli.py  config.py
src/whale_tracker/alerts/: __init__.py
src/whale_tracker/chains/: __init__.py  evm.py
src/whale_tracker/detectors/: __init__.py  patterns.py
src/whale_tracker/utils/: __init__.py  logging.py
tests/: test_basic.py
