[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whale-tracker-agent"
version = "0.1.0"
description = "Autonomous AI agent for multi-chain whale wallet monitoring and analysis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Daffa Firmansyah" },
]
keywords = ["crypto", "whale", "tracker", "blockchain", "ai", "agent", "alerts"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "web3>=7.0.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]

[project.scripts]
whale-track = "whale_tracker.cli:app"

[project.urls]
Homepage = "https://github.com/bizernam-cyber/whale-tracker-agent"
Repository = "https://github.com/bizernam-cyber/whale-tracker-agent"

[tool.hatch.build.targets.wheel]
packages = ["src/whale_tracker"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
